# edhim

./: README.md  cabal.project  default.nix  shell.nix  stack.yaml
edh_modules/: chat.edh
edh_modules/chat/: __main__.edh  business.edh
edhim/: edhim.cabal
edhim/src/: ChatWorld.hs  Main.hs
